syntax = "proto3";

package tanagra;

option java_package = "bio.terra.tanagra.proto.criteriaselector.dataschema";

import "criteriaselector/value_data.proto";

message MultiAttribute {
  repeated ValueData value_data = 1;
}
